--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "^7.5.5",
-    "tslib": "^2.3.1",
-    "zone.js": "~0.11.5",    
-    "@angular/animations": "^13.3.1",
-    "@angular/common": "^13.3.1",
-    "@angular/compiler": "^13.3.1",
-    "@angular/core": "^13.3.1",
-    "@angular/forms": "^13.3.1",
-    "@angular/platform-browser": "^13.3.1",
-    "@angular/platform-browser-dynamic": "^13.3.1",
-    "@angular/router": "^13.3.1",
+    "core-js": "2.6.9",
+    "@angular/core": "12.1.0",
+    "rxjs": "7.1.0",
+    "tslib": "2.3.0",
+    "zone.js": "0.11.4",
+    "@angular/common": "12.1.0",
+    "@angular/forms": "12.1.0",
+    "@angular/router": "12.1.0",
+    "@angular/compiler": "12.1.0",
+    "@angular/platform-browser": "12.1.0",
+    "@angular/animations": "12.1.0",
+    "@angular/platform-browser-dynamic": "12.1.0",
     "@syncfusion/ej2-base": "20.1.55",
     "@syncfusion/ej2-buttons": "20.1.55",
     "@syncfusion/ej2-splitbuttons": "20.1.55",
@@ -77,24 +78,23 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "devDependencies": {    
-    "@angular-devkit/build-angular": "^13.3.1",
-    "@angular/cli": "^13.3.1",
-    "@angular/compiler-cli": "^13.3.1",
-    "@types/jasmine": "~4.0.2",
-    "@types/node": "^17.0.23",
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.1100.4",
+    "@angular/cli": "~11.0.4",
+    "@angular/compiler-cli": "~11.0.4",
+    "@types/jasmine": "~3.6.0",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "^4.0.1",
-    "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.3.17",
-    "karma-chrome-launcher": "^3.1.1",
-    "karma-coverage": "^2.2.0",
-    "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "^4.0.2",
-    "karma-jasmine-html-reporter": "^1.7.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.1.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "ts-node": "~10.7.0",
+    "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "^4.6.3"
+    "typescript": "~4.0.2"
   }
 }
