--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,23 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
-/* esModuleInterop: required to load submodules (index.ts) */
 {
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
-    "forceConsistentCasingInFileNames": false,
-    "strict": false,
-    "noImplicitOverride": false,
-    "noPropertyAccessFromIndexSignature": false,
-    "noImplicitReturns": false,
-    "noFallthroughCasesInSwitch": false,
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
+    "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
-    "esModuleInterop": true,
-    "target": "es2017",
-    "module": "es2020",
+    "target": "es2015",
     "lib": [
-      "es2020",
+      "es2018",
       "dom"
     ]
   },
   "angularCompilerOptions": {
-    "enableI18nLegacyMessageIdFormat": false,
-    "strictInjectionParameters": false,
-    "strictInputAccessModifiers": false,
-    "strictTemplates": false
-  },
-  "exclude": [
-    "node_modules",
-    "**/node_modules/*"
-  ]
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true
+  }
 }
